Fixed visual glitch (table overlapping footer).

--- a/GPS.Service/wwwroot/css/site.css
+++ b/GPS.Service/wwwroot/css/site.css
@@ -58,14 +58,16 @@ html {
   min-height: 100%;
 }
 
+/* Margin bottom by footer height */
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  margin-bottom: 60px !important;
 }
+
+/* Vertically center the text there */
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+  line-height: 60px;
 }
